small responsive adjustments

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="squares">
         <div class="container-fluid">
-          <div class="row" style="justify-content: center;">
+          <div class="row" style="justify-content: center">
             <div class="col-md-auto">
               <div class="squares__square"></div>
             </div>
