--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A web page to demonstrate the use of bootstrap and sass" />
     <title>Soph MA1</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/svg" />
     <link
