removed inline styling to center squares

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div class="squares">
         <div class="container-fluid">
-          <div class="row" style="justify-content: center">
+          <div class="row">
             <div class="col-md-auto">
               <div class="squares__square"></div>
             </div>
